Signup welcome screen

--- a/Website/views/auth/register.ejs
+++ b/Website/views/auth/register.ejs
@@ -34,6 +34,12 @@
             </div>
         </div>
         <div class="uk-margin">
+                <label class="uk-form-label" for="form-stacked-text">Confirm your password:</label>
+                <div class="uk-form-controls">
+                    <input class="uk-input  uk-form-large" id="password2" name="password2" type="password" placeholder="Confirm Password">
+                </div>
+            </div>
+        <div class="uk-margin">
             <div class="uk-form-controls">
                 <input class="uk-input uk-form-large uk-button uk-button-primary" type="submit" value="Sign Up">
             </div>
