--- a/Website/views/auth/login.ejs
+++ b/Website/views/auth/login.ejs
@@ -1,4 +1,4 @@
-<div class="uk-section uk-light uk-background-cover " style="background:url('/images/bg1.jpg'); min-height:1400px;">
+<div class="uk-section uk-light uk-background-cover " style="background: linear-gradient(to bottom, #7bccf7 0%,#31b3f9 100%);min-height:1400px;">
     <div class="uk-container">
       <h1><img class="uk-logo uk-align-center" alt="WordZoo logo" width="800" src="/images/WordZoo_logo.png" />
       </h1>
