Signup to school system

--- a/Website/views/admin/schoolDetails.ejs
+++ b/Website/views/admin/schoolDetails.ejs
@@ -25,4 +25,4 @@ Teachers at this school <%= school.teachers.length %>:
 </ul>
 
 <a href="/admin/schools/<%= school.id %>/newsulink/">Get new signup link</a>
-<p>Signup link: https://wordzoo.co.uk/start/<%=school.signupcode%> </p>
+<p>Signup link: https://wordzoo.co.uk/signup?s=<%=school.signupcode%> </p>
