Pupil action reviews

--- a/Website/views/student/home2.ejs
+++ b/Website/views/student/home2.ejs
@@ -49,7 +49,7 @@
   <div id="character" style="max-width:1052px;max-height:580px;display:block" class="uk-padding-small uk-padding-remove-top uk-container">&nbsp;</div>
         <div id="gameselect" style="display:block;background:url('/stuhome/Scroll/WebContent/assets/carBackground.png');background-repeat:no-repeat;background-position:center center;" class="uk-padding-large">
 <h1 class="uk-text-bold">Games</h1>
-          <div uk-slider="autoplay: true;autoplay-interval: 4000;pause-on-hover: true">
+          <div uk-slider="autoplay: true;autoplay-interval: 4000">
 
     <div class="uk-position-relative uk-width-1-1">
 
