Homepage button colour change

--- a/Website/views/homepage.ejs
+++ b/Website/views/homepage.ejs
@@ -3,7 +3,7 @@
   <h1><img class="uk-logo uk-align-center" alt="WordZoo logo" width="800" src="/images/WordZoo_logo.png" />
     
   </h1>
-  <a class="uk-button uk-button-primary uk-button-large " href="/student/login" >Start <span uk-icon="icon: play"></span></a>
+  <a class="uk-button uk-button-primary uk-button-large " href="/student/login" style="background:orange; color:white" >Start <span uk-icon="icon: play"></span></a>
   <a href="/student/login"><img class="uk-align-center" alt="WordZoo Family" width="1000" height="400" src="/images/wordzoo_family.png" /></a>
       <h2>Welcome!</h2>
       <a class="uk-button uk-button-large uk-button-default" href="/login">Sign In as a Teacher</a> <a class="uk-button uk-button-default uk-button-large" href="http://blog.wordzoo.co.uk">Information about WordZoo</a>
