--- a/Website/views/admin/home.ejs
+++ b/Website/views/admin/home.ejs
@@ -1,1 +1,27 @@
-<h1>System Administration</h1>
+<h1>Dashboard</h1>
+
+<div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid>
+       
+        <div>
+            <div class="uk-card uk-card-primary uk-card-body">
+                <h3 class="uk-card-title"><%= stats.school %> schools registered</h3>
+        
+            </div>
+        </div>
+        <div>
+            <div class="uk-card uk-card-primary uk-card-body">
+                    <h3 class="uk-card-title"><%= stats.users %> teachers</h3>
+                    
+                </div>
+            </div>
+        <div>
+            <div class="uk-card uk-card-primary uk-card-body">
+                <h3 class="uk-card-title"><%= stats.plays %> games played</h3>
+              
+            </div>
+        </div>
+       
+    </div>
+
+    <div style="width:300px;">
+<canvas id="dashGraph" width="400" height="400"></canvas></div>
