--- a/Website/views/admin/users.ejs
+++ b/Website/views/admin/users.ejs
@@ -1,6 +1,25 @@
 <h1>Manage Users</h1>
-<ul>
-  <% _.each(users, function (user) { %>
-    <li><%= user.name %> - <a href="/admin/users/<%= user.id %>">Edit</a></li>
-    <% }) %>
-</ul>
+
+<table class="uk-table  uk-table-small uk-table-divider">
+    <thead>
+        <tr>
+            <th>User Name</th>
+            <th>School</th>
+            <th>Admin</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% _.each(users, function (user) { %>
+          <tr>
+              <td><%= user.name %> </td>
+              <td><% if(user.teaches_at[0]) { %><%= user.teaches_at[0].name %><% } %></td>
+              <td><% if(user.admin) { %>☑️<% } %></td>
+              <td><a href="/admin/users/<%= user.id %>" class="uk-button uk-button-small uk-button-primary">Edit</a></td>
+              
+          </tr>
+          <% }) %>
+        
+       
+    </tbody>
+</table>
