--- a/Website/views/layout_student.ejs
+++ b/Website/views/layout_student.ejs
@@ -134,9 +134,11 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/1jquery.js"></script>
+    <script src="/js/dependencies/chart.min.js"></script>
     <script src="/js/dependencies/home.js"></script>
     <script src="/js/dependencies/uikit-icons.min.js"></script>
     <script src="/js/dependencies/uikit.min.js"></script>
+    <script src="/js/admin.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
