--- a/Website/views/layout_admin.ejs
+++ b/Website/views/layout_admin.ejs
@@ -35,61 +35,35 @@
   </head>
 
   <body>
-    <div class="uk-section">
-    <div class="uk-container">
-      <img class="uk-logo uk-align-center" alt="WordZoo logo" width="400" src="/images/WordZoo_logo.png" />
-      <div  class="menu">
-      <ul>
-        <% if(req.session.isLoggedIn) { %>
-          <li><a href="#">Welcome <%= req.user.name %></a>
-                <ul><li><a href="/logout">Log Out</a></li></ul>
-          </li>
-        <% } else if (req.session.pupilId != null) { %>
-          <li><a href="#">Hey <%= req.pupil.name %></a>
-                <ul><li><a href="/logout">Log Out</a></li></ul>
-          </li>
-        <% } else { %>
-          <li><a href="/login">Log In</a></li>
-          <li><a href="/signup">Sign Up</a></li>
-        <% } %>
 
-        <% if(req.session.isLoggedIn) {
-            if(req.user.isAdmin) { %>
-        <li>
-          <a href="/admin">Admin Home</a>
-          <ul><li><a href="/admin/users">Manage Users</a></li>
-            <li><a href="/admin/schools">Manage Schools</a></li>
-            <li><a href="#">Data Tools *</a></li>
-            <li><a href="/admin/games">Manage Games</a></li>
-            <li><a href="#">Test Game *</a></li>
-          </ul>
-        </li>
-        <% }
-      } %>
-        <% if(req.session.isLoggedIn) {
-            if(req.user.isTeacher) { %>
-        <li><a href="/teach">Teacher Home</a>
-          <ul>
-          <li><a href="#">Teach Class</a></li>
-          <li><a href="#">Manage Class</a></li>
-        </ul>
-        </li>
-        <% }
-      } %>
+      
+        <nav class="uk-navbar-container" uk-navbar>
+            <div class="uk-navbar-center">
+                <a class="uk-navbar-item uk-logo" href="#">  <img class="uk-logo uk-align-center" alt="WordZoo logo" width="150" src="/images/WordZoo_logo.png" /></a>
+                <ul class="uk-navbar-nav">
 
-      <% if(req.session.pupilIsLoggedIn) {
-         %>
-      <li><a href="/student">Student Home</a>
-        <ul>
-        <li><a href="/">Profile</a></li>
+                    <% if(req.session.isLoggedIn) { %>
+                      <li><a href="/admin">Welcome <%= req.user.name %></a>
+                        <div class="uk-navbar-dropdown">  <ul class="uk-nav uk-navbar-dropdown-nav"><li><a href="/logout">Log Out</a></li></ul></div>
+                      </li>
+                    <% } %>
+            
+                   
+                    <li>
+                        <a href="/admin/schools">Schools</a></li>
+                        <li><a href="/admin/users">Users</a>  </li>
+                        <li><a href="/admin/games">Games</a>
+                        
+                      </li>
+                   
+                </ul>
+        
+            </div>
+        </nav>
 
-      </ul></li>
-      <%
-      } %>
-      </ul>
-    </div>
-  </div>
-</div>
+    
+
+
   <div class="uk-section ">
     <div class="uk-container">
         <%- body %>
@@ -149,9 +123,11 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/1jquery.js"></script>
+    <script src="/js/dependencies/chart.min.js"></script>
     <script src="/js/dependencies/home.js"></script>
     <script src="/js/dependencies/uikit-icons.min.js"></script>
     <script src="/js/dependencies/uikit.min.js"></script>
+    <script src="/js/admin.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
