--- a/Website/views/teacher/class.ejs
+++ b/Website/views/teacher/class.ejs
@@ -7,7 +7,7 @@
 <a href="#" id="btnPrintClass" class="uk-button uk-button-primary">Print List</a>
 <a href="photo" id="btnPrintClass" class="uk-button uk-button-primary">View Class Characters</a>
 <a href="#modal-new-pupil" uk-toggle class="uk-button uk-button-primary">New Pupil</a>
-<table class="uk-table uk-table-striped">
+<table class="uk-table uk-table-striped  uk-table-small">
   <thead>
     <tr>
       <td>Name</td>
