Graphs on review page

--- a/Website/views/admin/home.ejs
+++ b/Website/views/admin/home.ejs
@@ -17,11 +17,11 @@
         <div>
             <div class="uk-card uk-card-primary uk-card-body">
                 <h3 class="uk-card-title"><%= stats.plays %> games played</h3>
-              
+                <div style="color:white">
+                        <canvas id="dashGraph" width="400" height="400"></canvas></div>
             </div>
         </div>
        
     </div>
 
-    <div style="width:300px;">
-<canvas id="dashGraph" width="400" height="400"></canvas></div>
+   
