--- a/Website/views/layout_admin.ejs
+++ b/Website/views/layout_admin.ejs
@@ -128,6 +128,7 @@
     <script src="/js/dependencies/uikit-icons.min.js"></script>
     <script src="/js/dependencies/uikit.min.js"></script>
     <script src="/js/admin.js"></script>
+    <script src="/js/teacher.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
