--- a/Website/views/layout2.ejs
+++ b/Website/views/layout2.ejs
@@ -98,6 +98,7 @@
     <script src="/js/dependencies/uikit-icons.min.js"></script>
     <script src="/js/dependencies/uikit.min.js"></script>
     <script src="/js/admin.js"></script>
+    <script src="/js/teacher.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
