Data export tools

--- a/Website/views/layout_admin.ejs
+++ b/Website/views/layout_admin.ejs
@@ -49,13 +49,10 @@
                     <% } %>
             
                    
-                    <li>
-                        <a href="/admin/schools">Schools</a></li>
-                        <li><a href="/admin/users">Users</a>  </li>
-                        <li><a href="/admin/games">Games</a>
-                        
-                      </li>
-                   
+                    <li><a href="/admin/schools">Schools</a></li>
+                    <li><a href="/admin/users">Users</a>  </li>
+                    <li><a href="/admin/games">Games</a></li>
+                    <li><a href="/admin/data">Data</a>  </li>
                 </ul>
         
             </div>
