--- a/Website/views/admin/data.ejs
+++ b/Website/views/admin/data.ejs
@@ -1,3 +1,3 @@
 <h1>Data Tools</h1>
-<a href="/admin/data/export/states.csv" class="uk-button uk-button-primary">Export All State Data </a>
-<a href="/admin/data/export/plays.csv" class="uk-button uk-button-primary">Export All Play Data </a>
+<a href="/admin/data/export/states/json" class="uk-button uk-button-primary">Export All State Data </a>
+<a href="/admin/data/export/plays/json" class="uk-button uk-button-primary">Export All Play Data </a>
